Part of auth ready

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vuex": "^4.0.2"
     },
     "dependencies": {
-        "vue": "^3.2.31"
+        "vee-validate": "^4.5.8",
+        "vue": "^3.2.31",
+        "yup": "^0.32.11"
     }
 }
