--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
         "vuex": "^4.0.2"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.4.3",
+        "@heroicons/vue": "^1.0.5",
         "vee-validate": "^4.5.8",
         "vue": "^3.2.31",
-        "yup": "^0.32.11"
+        "yup": "^0.32.11",
+        "yup-phone": "^1.3.2"
     }
 }
