--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@kyvg/vue3-notification": "^2.3.4",
         "vee-validate": "^4.5.8",
         "vue": "^3.2.31",
+        "vue3-date-time-picker": "^2.7.0",
         "yup": "^0.32.11",
         "yup-phone": "^1.3.2"
     }
