--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vee-validate": "^4.5.8",
         "vue": "^3.2.31",
         "vue3-date-time-picker": "^2.7.0",
+        "vue3-popper": "^1.4.2",
         "yup": "^0.32.11",
         "yup-phone": "^1.3.2"
     }
