--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "luxon": "^2.3.1",
         "vee-validate": "^4.5.8",
         "vue": "^3.2.31",
+        "vue-select": "^4.0.0-beta.3",
         "vue3-date-time-picker": "^2.7.0",
         "vue3-popper": "^1.4.2",
         "yup": "^0.32.11",
