--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@heroicons/vue": "^1.0.5",
         "@kyvg/vue3-notification": "^2.3.4",
         "luxon": "^2.3.1",
+        "tw-elements": "^1.0.0-alpha11",
         "vee-validate": "^4.5.8",
         "vue": "^3.2.31",
         "vue-select": "^4.0.0-beta.3",
