--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "sass-loader": "^12.6.0",
         "tailwindcss": "^3.0.23",
         "vue-loader": "^16.8.3",
         "vue-router": "^4.0.12",
@@ -23,6 +24,7 @@
         "@headlessui/vue": "^1.4.3",
         "@heroicons/vue": "^1.0.5",
         "@kyvg/vue3-notification": "^2.3.4",
+        "@vueform/slider": "^2.0.9",
         "luxon": "^2.3.1",
         "tw-elements": "^1.0.0-alpha11",
         "vee-validate": "^4.5.8",
