--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^1.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
+        "jhaoda/smscenter": "^2.0",
         "laravel/fortify": "^1.10",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
